// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction status chip should render the allow chip correctly 1`] = `
<div>
  <span
    class="chip chip-primary"
  >
    Succeeded
  </span>
</div>
`;

exports[`Transaction status chip should render the block chip correctly 1`] = `
<div>
  <span
    class="chip chip-alert"
  >
    Payment blocked
  </span>
</div>
`;

exports[`Transaction status chip should render the review chip correctly 1`] = `
<div>
  <span
    class="chip chip-warning"
  >
    Needs review
  </span>
</div>
`;

exports[`Transaction status chip should render the unknown chip correctly 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Unknown
  </span>
</div>
`;
